# smesh

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.txt  README.md
cmake/: Doxyfile.in  SMESHDependencies.cmake  SMESHNumbers.cmake  SMESHOptions.cmake  SMESHUtils.cmake  smeshConfig.cmake.in
demo/distributed/: exchange_test.exe.cpp  io_test.exe.cpp
notebook/: IO.md
python/smesh/: cylinder.py  db_to_raw.py  exodusII_to_raw.py  raw_to_db.py  raw_to_exodusII.py  sphere.py  utils.py
python/smesh/ext/: channel.py  sphere.py  torus.py
scripts/gmsh/: sphere.msh
scripts/slurm/alps/: gencube.sbatch.sh  run_io_test.sbatch.sh  run_mpi_init.sbatch.sh  run_mpi_io_bench.sh
scripts/testing/: test_pskin.sh
src/: smesh.hpp
src/arrays/: smesh_device_arrays.hpp
src/arrays/cuda/: smesh_device_arrays.cpp
src/arrays/fallback/: smesh_device_arrays.fallback.cpp
src/base/: smesh_base.hpp  smesh_common.hpp  smesh_config.hpp.in  smesh_macros.hpp  smesh_spaces.hpp  smesh_types.hpp
src/base/cuda/: smesh_cuda_base.cuh
src/benchmark/drivers/: mpi_io_bench.exe.cpp
src/distributed/: smesh_alltoallv.impl.hpp  smesh_decompose.cpp  smesh_decompose.hpp  smesh_decompose.impl.hpp  smesh_distributed_aura.cpp  smesh_distributed_aura.hpp  smesh_distributed_aura.impl.hpp  smesh_distributed_base.cpp  smesh_distributed_base.hpp  smesh_distributed_buffer.hpp  smesh_distributed_create.cpp  smesh_distributed_create.hpp  smesh_distributed_create.impl.hpp  smesh_distributed_n2e.impl.hpp  smesh_distributed_read.cpp  smesh_distributed_read.hpp  smesh_distributed_read.impl.hpp  smesh_distributed_write.cpp  smesh_distributed_write.hpp  smesh_distributed_write.impl.hpp
src/distributed/sorting/: smesh_distributed_reorder.cpp  smesh_distributed_reorder.hpp  smesh_distributed_reorder.impl.hpp
src/distributed/tests/: hex8_cube_create_distributed_test.cpp  owned_elements_owned_nodes_test.cpp  random_distribution_roundtrip_test.cpp  skin_sideset_serial_parallel_test.cpp
src/drivers/: mesh_to_packed.exe.cpp
src/drivers/arrays/: aos_to_soa.exe.cpp  axpy.exe.cpp  condense_vector.exe.cpp  create_mask.exe.cpp  idx_to_indicator.exe.cpp  remap_vector.exe.cpp  set_union.exe.cpp  smask.exe.cpp  soa_to_aos.exe.cpp
src/drivers/conversions/: label_to_mesh.exe.cpp  mesh_convert.exe.cpp  mesh_promote.exe.cpp  mesh_to_packed.exe.cpp  mesh_to_semistructured.exe.cpp
src/drivers/counting/: count_element_to_node_incidence.cpp
src/drivers/create/: bidomain_cube.exe.cpp  checkerboard_cube.exe.cpp  cube.exe.cpp  half_sphere.exe.cpp  ring2.exe.cpp  square.exe.cpp
src/drivers/extractions/: extract_sharp_features.exe.cpp  extract_submesh.exe.cpp  mesh_to_blocks.exe.cpp  select_submesh.exe.cpp  select_surf.exe.cpp  surface_from_sideset.exe.cpp
src/drivers/graphs/: ef2e_graph.exe.cpp  ef2e_table.exe.cpp  n2e.exe.cpp  n2n.exe.cpp  pe2n.exe.cpp
src/drivers/grid/: roi.exe.cpp
src/drivers/interpolation/: hierarchical_prolongation.exe.cpp  hierarchical_restriction.exe.cpp
src/drivers/manips/: extrude.exe.cpp
src/drivers/matrices/: adjaciency_matrix.exe.cpp  condense_matrix.exe.cpp
src/drivers/mesh_functions/: mesh_function_example.exe.cpp
src/drivers/ordering/: cuthill_mckee.exe.cpp  sfc.exe.cpp
src/drivers/refinement/: derefine.exe.cpp  refine.exe.cpp
src/drivers/sdf/: approxsdf.exe.cpp
src/drivers/sets/: create_sideset.exe.cpp  skin.exe.cpp
src/frontend/: smesh_buffer.cpp  smesh_buffer.hpp  smesh_buffer.impl.hpp  smesh_communicator.cpp  smesh_communicator.hpp  smesh_context.cpp  smesh_context.hpp  smesh_crs_graph.cpp  smesh_crs_graph.hpp  smesh_crs_graph.impl.hpp  smesh_device_buffer.cpp  smesh_device_buffer.hpp  smesh_device_buffer.impl.hpp  smesh_device_crs_graph.hpp  smesh_device_sideset.cpp  smesh_device_sideset.hpp  smesh_dual_graph.cpp  smesh_dual_graph.hpp  smesh_env.cpp  smesh_env.hpp  smesh_exchange.cpp  smesh_exchange.hpp  smesh_extractions.cpp  smesh_extractions.hpp  smesh_forward_declarations.hpp  smesh_kernel_data.cpp  smesh_kernel_data.hpp  smesh_mesh.cpp  smesh_mesh.hpp  smesh_mesh_reorder.cpp  smesh_mesh_reorder.hpp  smesh_output.cpp  smesh_output.hpp  smesh_packed_mesh.cpp  smesh_packed_mesh.hpp  smesh_prolongate.hpp  smesh_prolongate.impl.hpp  smesh_restrict.cpp  smesh_restrict.hpp  smesh_restrict.impl.hpp  (+7 more)
src/frontend/tests/: sideset_test.exe.cpp
src/graph/: smesh_adjacency.cpp  smesh_adjacency.hpp  smesh_adjacency.impl.hpp  smesh_adjaciency.cpp  smesh_adjaciency.hpp  smesh_adjaciency.impl.hpp  smesh_crs_graph.cpp  smesh_crs_graph.hpp  smesh_crs_graph.impl.hpp  smesh_graph.cpp  smesh_graph.hpp  smesh_graph.impl.hpp  smesh_multiblock_graph.cpp  smesh_multiblock_graph.hpp  smesh_multiblock_graph.impl.hpp  smesh_search.hpp  smesh_volume_to_surface.cpp  smesh_volume_to_surface.hpp  smesh_volume_to_surface.impl.hpp
src/grid/: smesh_grid.cpp  smesh_grid.hpp
src/io/: smesh_file_extensions.hpp  smesh_glob.cpp  smesh_glob.hpp  smesh_io_yaml.cpp  smesh_io_yaml.hpp  smesh_path.cpp  smesh_path.hpp  smesh_read.cpp  smesh_read.hpp  smesh_read.impl.hpp  smesh_write.cpp  smesh_write.hpp  smesh_write.impl.hpp
src/mesh/: smesh_build.cpp  smesh_build.hpp  smesh_build.impl.hpp  smesh_crs_graph.cpp  smesh_crs_graph.hpp  smesh_crs_graph.impl.hpp  smesh_elem_type.hpp
src/mesh/conversions/: smesh_conversion.cpp  smesh_conversion.hpp  (+4 more)
src/oop/: smesh_communicator.hpp  smesh_mesh.hpp
src/outofcore/: smesh_gencube.cpp  smesh_gencube.hpp  smesh_gencube.impl.hpp
src/points/: smesh_point_queries.impl.hpp  smesh_point_transform.cpp  smesh_point_transform.hpp  smesh_point_transform.impl.hpp
src/profile/: smesh_tracer.cpp  smesh_tracer.hpp
src/quadrature/: smesh_line_quadrature.hpp
src/shape/: smesh_extract_shap_features.cpp  smesh_extract_shap_features.hpp  smesh_extract_shap_features.impl.hpp  smesh_extract_shape_features.cpp  smesh_extract_shape_features.hpp  smesh_extract_shape_features.impl.hpp
src/sorting/: smesh_sort.hpp
src/utils/: smesh_alloc.cpp  smesh_alloc.hpp  smesh_common.hpp  smesh_mask.cpp  smesh_mask.hpp  smesh_test.hpp
tests/distributed/: io_test.exe.cpp
(+93 files in other folders)
